fixed list item word wrap

--- a/FrontendUzduotys/todoFront/styles.css
+++ b/FrontendUzduotys/todoFront/styles.css
@@ -112,7 +112,7 @@ body {
 
 /* todo list */
 
-.list-item {
+.list-items {
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -123,6 +123,11 @@ body {
      display: flex;
      justify-content: space-between;
      align-items: center;
+}
+
+.todo-item h3 {
+     overflow-wrap: break-word;
+     width: 80%;
 }
 
 .completed {
